--- a/frontend/src/styles/PhotoList.scss
+++ b/frontend/src/styles/PhotoList.scss
@@ -1,10 +1,13 @@
 .photo-list {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: column;
+  flex-wrap: column;
+  justify-content: center;
+  align-items: center;
   list-style-type: none;
   margin: 0;
   padding: 0;
+  
 }
 
 .photo-list:after {
