--- a/frontend/src/styles/PhotoListItem.scss
+++ b/frontend/src/styles/PhotoListItem.scss
@@ -5,7 +5,8 @@
   border-color: lightgray;
   border-style: solid;
   border-radius: 8px;
-  max-width: fit-content;
+  min-width: fit-content;
+  width: 70%;
 }
 
 .photo-list__image {
@@ -18,8 +19,8 @@
 .photo-list__image {
   border-radius: 8px 8px 0px 0px;
   user-select: none;
-  width: 300px;
-  height: 200px;
+  width: 100%;
+  height: 400px;
   object-fit: cover;
 }
 
