--- a/frontend/src/styles/PhotoList.scss
+++ b/frontend/src/styles/PhotoList.scss
@@ -1,13 +1,10 @@
 .photo-list {
   display: flex;
-  flex-direction: column;
-  flex-wrap: column;
-  justify-content: center;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
   list-style-type: none;
   margin: 0;
   padding: 0;
-  
 }
 
 .photo-list:after {
