--- a/frontend/src/styles/PhotoListItem.scss
+++ b/frontend/src/styles/PhotoListItem.scss
@@ -5,8 +5,7 @@
   border-color: lightgray;
   border-style: solid;
   border-radius: 8px;
-  min-width: fit-content;
-  width: 70%;
+  max-width: fit-content;
 }
 
 .photo-list__image {
@@ -19,8 +18,8 @@
 .photo-list__image {
   border-radius: 8px 8px 0px 0px;
   user-select: none;
-  width: 100%;
-  height: 400px;
+  width: 300px;
+  height: 200px;
   object-fit: cover;
 }
 
