--- a/frontend/src/styles/FavBadge.scss
+++ b/frontend/src/styles/FavBadge.scss
@@ -6,6 +6,7 @@
 background-color: rgb(0, 0, 0);
 width: 20px;
 height: 20px;
+padding: 30px;
   border-radius: 99px;
   position: absolute;
   top: 0%;
